[project]
name = "itof-multi-frequency-planner"
version = "0.1.0"
description = "iToF multi-frequency planning and phase-unwrapping analysis tool."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
itof-planner = "itof_planner.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
